src/test/deca/context/invalid/test_error_3.56-6.deca

// Description:
//    Soulève l'erreur (3.56)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'float' et 'boolean' ne sont pas compatibles avec l'opérateur binaire '==' (règle 3.56)
//
// Historique:
//      cree le 06/01/2022

{
    1.0 == true;
}
